--- a/fashion-mnist-image-classification/fashion-mnist-image-classification.ipynb
+++ b/fashion-mnist-image-classification/fashion-mnist-image-classification.ipynb
@@ -3,250 +3,179 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3728d5e-553b-4061-810f-eb2351d33283",
+   "id": "2d04d4e0-09dd-443a-8c2b-e996242bf085",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(0)\n",
     "import random\n",
-    "random.seed(0)\n",
     "import tensorflow as tf\n",
+    "from tensorflow.keras import datasets, layers, models, callbacks\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9187c942-e82f-4295-a349-b599a0c30df8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(0)\n",
+    "random.seed(0)\n",
     "tf.random.set_seed(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fd37d80-24f8-495a-85df-0815cc0b194b",
+   "id": "186328ac-b41c-4de1-b625-664c30aaf63b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras import datasets, layers, models\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30ca4feb-5102-41b3-9003-e8bc6c6bb170",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fashion_mnist = datasets.fashion_mnist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb0217b7-3f9d-462a-9e95-648591b76d5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2a7a6ac-0d45-4356-adb0-0f304f3f4107",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Train images type: {type(train_images)}\\nTrain labels type: {type(train_labels)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38f51957-8885-4f4e-9b72-8161eb4b3346",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Train images: {len(train_images)}\\nTrain labels: {len(train_labels)}')\n",
-    "print(f'Train images shape: {train_images[0].shape}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7f88721-169f-4951-af5b-d0f8e55806e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(train_images[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8491bcc-db37-4c10-9aac-297b8dd84119",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(train_images[0], cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f060f67f-e353-4bfc-a0b9-34cbe222d66f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_labels[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4002117a-840a-4978-8b02-341289bdb6e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_images = train_images / 255.0\n",
-    "test_images = test_images / 255.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c888b6bc-3b07-43dd-a149-fe38a51f253e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_images = train_images.reshape((train_images.shape[0], 28,28,1))\n",
-    "test_images = test_images.reshape((test_images.shape[0], 28,28,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ae1fdd0-adc3-40e9-8cac-79842a8593d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Train images: {len(train_images)}\\nTrain labels: {len(train_labels)}')\n",
-    "print(f'Train images shape: {train_images[0].shape}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "782e2ef1-bd49-4520-b274-e1624796ad93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Test images: {len(test_images)}\\nTest labels: {len(test_labels)}')\n",
-    "print(f'Test images shape: {test_images[0].shape}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5346fdc-fe96-4908-a6b5-4761b23cd76a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = models.Sequential()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "362792b6-9dc1-4e06-879f-ac3d420c7d73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(layers.Conv2D(32, (3,3), activation='relu', input_shape=(28,28,1)))\n",
-    "model.add(layers.MaxPooling2D((2,2)))\n",
-    "model.add(layers.Conv2D(64, (3,3), activation='relu'))\n",
-    "model.add(layers.MaxPool2D((2,2)))\n",
-    "model.add(layers.Conv2D(64, (3,3), activation='relu'))\n",
+    "def load_and_preprocess_data():\n",
+    "    (train_images, train_labels), (test_images, test_labels) = datasets.fashion_mnist.load_data()\n",
     "\n",
-    "model.add(layers.Flatten())\n",
-    "model.add(layers.Dense(64, activation='relu'))\n",
-    "model.add(layers.Dense(10))"
+    "    train_images = train_images / 255.0\n",
+    "    test_images = test_images / 255.0\n",
+    "\n",
+    "    train_images = train_images.reshape((-1, 28, 28, 1))\n",
+    "    test_images = test_images.reshape((-1, 28, 28, 1))\n",
+    "\n",
+    "    return train_images, train_labels, test_images, test_labels"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53103b79-8bf5-4331-b7ec-5685c72f46eb",
+   "id": "15a798ee-8c2c-43cf-9bdb-303da7d9a8e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer = 'adam',\n",
-    "             loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "             metrics=['accuracy'])"
+    "def build_model():\n",
+    "    model = models.Sequential([\n",
+    "        layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        layers.Dropout(0.25),\n",
+    "\n",
+    "        layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        layers.Dropout(0.25),\n",
+    "\n",
+    "        layers.Conv2D(128, (3, 3), activation='relu'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Flatten(),\n",
+    "        layers.Dropout(0.4),\n",
+    "\n",
+    "        layers.Dense(128, activation='relu'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Dropout(0.3),\n",
+    "        layers.Dense(10, activation='softmax')\n",
+    "    ])\n",
+    "    model.compile(\n",
+    "        optimizer='adam',\n",
+    "        loss='sparse_categorical_crossentropy',\n",
+    "        metrics=['sparse_categorical_accuracy']\n",
+    "    )\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "234c287a-8cd9-45b0-8ce5-3d2ef503c60f",
+   "id": "23072772-c1f3-4723-a097-b93d3e51fedb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = model.fit(train_images, train_labels, epochs=5,\n",
-    "                   validation_data=(test_images, test_labels))"
+    "def plot_training_history(history, save_dir='images'):\n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
+    "\n",
+    "    timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "\n",
+    "    plt.style.use('dark_background')\n",
+    "\n",
+    "    plt.figure(figsize=(6, 5))\n",
+    "    plt.plot(history.history['sparse_categorical_accuracy'], label='Train Accuracy', color='#00FFAB', linewidth=2)\n",
+    "    plt.plot(history.history['val_sparse_categorical_accuracy'], label='Val Accuracy', color='#FF6EC7', linestyle='--', linewidth=2)\n",
+    "    plt.title('Accuracy Over Epochs', fontsize=14, color='#00FFFF')\n",
+    "    plt.xlabel('Epoch', fontsize=12)\n",
+    "    plt.ylabel('Accuracy', fontsize=12)\n",
+    "    plt.legend(loc='lower right')\n",
+    "    plt.grid(True, linestyle='--', alpha=0.3)\n",
+    "    acc_path = os.path.join(save_dir, f\"model_accuracy_{timestamp}.png\")\n",
+    "    plt.savefig(acc_path, dpi=300, bbox_inches='tight')\n",
+    "    print(f\"Accuracy plot saved to: {acc_path}\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    plt.figure(figsize=(6, 5))\n",
+    "    plt.plot(history.history['loss'], label='Train Loss', color='#00FFAB', linewidth=2)\n",
+    "    plt.plot(history.history['val_loss'], label='Val Loss', color='#FF6EC7', linestyle='--', linewidth=2)\n",
+    "    plt.title('Loss Over Epochs', fontsize=14, color='#FF00FF')\n",
+    "    plt.xlabel('Epoch', fontsize=12)\n",
+    "    plt.ylabel('Loss', fontsize=12)\n",
+    "    plt.legend(loc='upper right')\n",
+    "    plt.grid(True, linestyle='--', alpha=0.3)\n",
+    "    loss_path = os.path.join(save_dir, f\"model_loss_{timestamp}.png\")\n",
+    "    plt.savefig(loss_path, dpi=300, bbox_inches='tight')\n",
+    "    print(f\"Loss plot saved to: {loss_path}\")\n",
+    "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff7cbc1-1c62-44a2-8d21-51693f406f2c",
+   "id": "e309c6a3-3306-4648-bd21-44fe62e62ad1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_loss, test_acc = model.evaluate(test_images, test_labels, verbose=2)\n",
-    "print(f'Test loss= {test_loss}\\nTest accuracy = {test_acc}')"
+    "def main():\n",
+    "    train_images, train_labels, test_images, test_labels = load_and_preprocess_data()\n",
+    "\n",
+    "    plt.imshow(train_images[0].reshape(28, 28), cmap='gray')\n",
+    "    plt.title(f\"Sample Image - Label: {train_labels[0]}\")\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "    model = build_model()\n",
+    "    model.summary()\n",
+    "\n",
+    "    early_stop = callbacks.EarlyStopping(patience=5, restore_best_weights=True)\n",
+    "    checkpoint = callbacks.ModelCheckpoint(\"best_model.h5\", save_best_only=True)\n",
+    "\n",
+    "    history = model.fit(\n",
+    "        train_images, train_labels,\n",
+    "        epochs=20,\n",
+    "        batch_size=64,\n",
+    "        validation_data=(test_images, test_labels),\n",
+    "        callbacks=[early_stop, checkpoint]\n",
+    "    )\n",
+    "\n",
+    "    test_loss, test_acc = model.evaluate(test_images, test_labels, verbose=2)\n",
+    "    print(f'\\nTest Loss: {test_loss:.4f}')\n",
+    "    print(f'Test Accuracy: {test_acc:.4f}')\n",
+    "\n",
+    "    plot_training_history(history)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff99fc7d-1671-4ce3-82c0-b39b546ce973",
+   "id": "b2fcd1ad-fd6b-4bd0-b23b-1aa2989bc2a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(history.history['accuracy'])\n",
-    "plt.plot(history.history['val_accuracy'])\n",
-    "plt.title('Model Accuracy')\n",
-    "plt.ylabel('Accuracy')\n",
-    "plt.xlabel('Epoch')\n",
-    "plt.legend(['Train', 'Test'], loc='upper left')"
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b27b849-88b7-46eb-a09c-843868d244a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(history.history['loss'])\n",
-    "plt.plot(history.history['val_loss'])\n",
-    "plt.title('Model Loss')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.xlabel('Epoch')\n",
-    "plt.legend(['Train', 'Test'], loc='upper left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50206853-0211-4c65-8f46-57533da38186",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save('trained_fashion_mnist_model.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50c86f74-5881-4804-b474-87a0945461d7",
+   "id": "ead2c7c6-94c9-41c2-bf41-8fb36b3fa6ef",
    "metadata": {},
    "outputs": [],
    "source": []
